--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ br{
     margin-bottom: 20px;
 }
 
+/* coba tambahkan  */
 #aside-div{
     background-color: rgba(211, 211, 211, 0.226);
     width: 40%;
